--- a/app/public/home.html
+++ b/app/public/home.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
         crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+        crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery.js"></script>
     <title>Home</title>
 </head>
@@ -14,19 +16,22 @@
 <body>
     <div class="container">
         <div class="jumbotron">
-            <h1 class="display-4">FriendFinder</h1>
-            <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention
-                to
-                featured content or information.</p>
+            <h1 class="display-4"><strong><i class="far fa-laugh"></i> FriendFinder</h1></strong>
             <hr class="my-4">
-            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-            <a class="btn btn-primary btn-lg" href="#" role="button">Start Survey</a>
+            <h4>Answer a few questions and see your most compatible match.</h4>
+            <br>
+            <a class="btn btn-info btn-lg" href="/survey" role="button">
+                <i class="fas fa-pencil-alt"></i> Start
+                Survey
+            </a>
+
         </div>
 
 
         <footer class="footer">
             <div class="container">
-                <p><a href="/api/friends">API Friends List</a> | <a href="/">GitHub Repository</a>
+                <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/MBrytowski/FriendFinder">GitHub
+                        Repository</a>
             </div>
         </footer>
     </div>
