--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
         crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+        crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery.js"></script>
     <title>Survey</title>
 </head>
@@ -14,7 +16,12 @@
 <body>
     <div class="container">
         <h2>Survey Questions</h2>
-        <h3><strong>About You</strong></h3>
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 100%"
+                aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+
+        <h2><strong>About You</strong></h2>
         <h4>Name (Required)</h4>
         <input type="text" id="name" class="form-control" required>
 
@@ -24,7 +31,7 @@
         <hr>
 
         <h3><strong>Question 1</strong></h3>
-        <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+        <h4>You value cooperation over competition.</h4>
         <select class="chosen-select" id="q1">
             <option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -34,9 +41,9 @@
             <option value="5">5 (Strongly Agree)</option>
         </select>
         <br>
-        <!--
+        <br>
         <h3><strong>Question 2</strong></h3>
-        <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+        <h4>You turn plans into action.</h4>
         <select class="chosen-select" id="q2">
             <option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -46,8 +53,9 @@
             <option value="5">5 (Strongly Agree)</option>
         </select>
         <br>
+        <br>
         <h3><strong>Question 3</strong></h3>
-        <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+        <h4>You believe in the importance of art.</h4>
         <select class="chosen-select" id="q3">
             <option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -57,8 +65,9 @@
             <option value="5">5 (Strongly Agree)</option>
         </select>
         <br>
+        <br>
         <h3><strong>Question 4</strong></h3>
-        <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+        <h4>You like to solve complex problems.</h4>
         <select class="chosen-select" id="q4">
             <option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -68,8 +77,9 @@
             <option value="5">5 (Strongly Agree)</option>
         </select>
         <br>
+        <br>
         <h3><strong>Question 5</strong></h3>
-        <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+        <h4>You dislike being the center of attention.</h4>
         <select class="chosen-select" id="q5">
             <option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -79,8 +89,9 @@
             <option value="5">5 (Strongly Agree)</option>
         </select>
         <br>
+        <br>
         <h3><strong>Question 6</strong></h3>
-        <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+        <h4>You seek adventure.</h4>
         <select class="chosen-select" id="q6">
             <option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -90,8 +101,9 @@
             <option value="5">5 (Strongly Agree)</option>
         </select>
         <br>
+        <br>
         <h3><strong>Question 7</strong></h3>
-        <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+        <h4>You love to read challenging material.</h4>
         <select class="chosen-select" id="q7">
             <option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -101,8 +113,9 @@
             <option value="5">5 (Strongly Agree)</option>
         </select>
         <br>
+        <br>
         <h3><strong>Question 8</strong></h3>
-        <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+        <h4>You anticipate the needs of others.</h4>
         <select class="chosen-select" id="q8">
             <option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -112,8 +125,9 @@
             <option value="5">5 (Strongly Agree)</option>
         </select>
         <br>
+        <br>
         <h3><strong>Question 9</strong></h3>
-        <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+        <h4>You see beauty in things that others might not notice.</h4>
         <select class="chosen-select" id="q9">
             <option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -123,8 +137,9 @@
             <option value="5">5 (Strongly Agree)</option>
         </select>
         <br>
+        <br>
         <h3><strong>Question 10</strong></h3>
-        <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+        <h4>You love to daydream.</h4>
         <select class="chosen-select" id="q10">
             <option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -135,40 +150,45 @@
         </select>
         <br>
         <br>
-        -->
-        <button type="button" class="btn btn-primary btn-block" id="submit">
+
+        <button type="button" class="btn btn-info btn-block" id="submit"><i class="far fa-check-square"></i>
             Submit
         </button>
+        <hr class="my-4">
+        <footer class="footer">
+            <div class="container">
+                <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/MBrytowski/FriendFinder">GitHub
+                        Repository</a>
+            </div>
+        </footer>
     </div>
 
     <!-- Modal -->
-    <!-- <div class="modal fade" id="matchModal" tabindex="-1" role="dialog" aria-labelledby="matchModalLabel" aria-hidden="true">
+    <div class="modal fade" id="matchModal" tabindex="-1" role="dialog" aria-labelledby="matchModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Best Match!</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <h5 class="modal-title" id="bestMatch">Best Match!</h5>
+                    <a href="../public/home.html"><button type="button" id="close" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
-                    </button>
+                    </button></a>
                 </div>
                 <div class="modal-body">
-                    ...
+                    <h2 id="matchName"></h2>
+                    <img id="matchImg" src="">
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                   <a href="../public/home.html"><button type="button" id="close" class="btn btn-danger" data-dismiss="modal">Close</button></a>
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
         crossorigin="anonymous"></script>
     <script type="text/javascript">
-        //submit function, function formValidation() - check name and image have values, selections have values, call that function
-        //take function gather input from form puts into object, API/ajax call - triggers modal
         $("#submit").on("click", function (event) {
             event.preventDefault();
 
@@ -206,6 +226,8 @@
                     ]
                 };
                 findFriends(newFriend);
+                console.log("New Friend:", newFriend);
+
             } else {
                 alert("Please complete the form prior to submitting.")
             }
@@ -214,35 +236,19 @@
 
         function findFriends(newFriend) {
 
-            $.ajax({
+            $.post("/api/friends", newFriend)
+                .then(function (friendsData) {
+                    console.log("Friends Data:", friendsData);
+                    console.log("------------------------------------");
 
-                url: '/api/friends',
-                method: 'POST',
-                crossDomain: true,
-                data: newFriend,
-                dataType: "json",
-                "headers": {
-                    "accept": "application/json",
-                    "Access-Control-Allow-Origin": "*"
-                },
-                success: function (data) {
-                    console.log('Data: ' + data);
-                },
-                error: function (request, error) {
-                    console.log("Request: " + JSON.stringify(request));
-                }
-            });
+                    $("#matchName").text(friendsData.name);
+                    $("#matchImg").attr("src", friendsData.photo);
 
-            // $.post("/api/friends", newFriend)
-            //     .then(function (friendsData) {
-            //         console.log("Friends Data:", friendsData);
-            //         console.log("------------------------------------");
+                    $("#matchModal").modal("toggle");
 
-            //     })
-        }
-        //compare arrays? google
-        //push user input to friendsArr (after comparing answers?)
-        //loop through friendsArr to find closest match
+                });
+
+        };
     </script>
 </body>
 
